made small updates

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ button:hover { background:#0096c7; }
   <button onclick="searchProject()">Search</button>
   <div id="result"></div>
 
+
+
   <!-- Add Project Section -->
   <h2>➕ Add New Project</h2>
   <form id="projectForm" onsubmit="addProject(event)">
@@ -53,6 +55,12 @@ button:hover { background:#0096c7; }
     <input type="text" id="pcost" placeholder="Cost of Items"><br>
     <button type="submit">Add Project</button>
   </form>
+
+    <div>
+    <button>
+      <a href="about.html" style="color:white; background:#007bff; padding:10px 20px; border-radius:5px; text-decoration:none;">About</a>
+    </button>
+  </div>
 </div>
 
 <script src="projects.js"></script>
