--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ button:hover { background:#0096c7; }
   max-width:700px; text-align:left; box-shadow:0px 4px 15px rgba(0,0,0,0.3);
 }
 .card h2 { color:#ffdd57; margin:0 0 5px; }
+
+@media (max-width:768px) { h1{font-size:1.8em;} .card{padding:15px;} input,button{flex:1 1 100%; max-width:none;} }
+@media (max-width:480px) { h1{font-size:1.5em;} .card{padding:12px;} .search-container{gap:8px;} }
 </style>
 </head>
 <body>
