added required and number

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@ button:hover { background:#0096c7; }
     <textarea id="psummary" placeholder="Summary" required></textarea><br>
     <input type="text" id="pcreatedBy" placeholder="Created By" required><br>
     <textarea id="pdetails" placeholder="Details"></textarea><br>
-    <input type="text" id="pclass" placeholder="Class"><br>
+    <input type="text" id="pclass" placeholder="Class" required><br>
     <input type="text" id="ptime" placeholder="Time Created"><br>
     <input type="text" id="pdisplayed" placeholder="Project Displayed Location"><br>
-    <input type="text" id="pcost" placeholder="Cost of Items"><br>
+    <input type="number" id="pcost" placeholder="Cost of Items"><br>
     <button type="submit">Add Project</button>
   </form>
 
     <div>
     <button>
-      <a href="about.html" style="color:white; background:#007bff; padding:10px 20px; border-radius:5px; text-decoration:none;">About</a>
+      <a href="about.html" target="_blank" style="text-decoration:none;">About</a>
     </button>
   </div>
 </div>
